--- a/Client/Dt.Sample/Styles/System/LottieDemo.xaml
+++ b/Client/Dt.Sample/Styles/System/LottieDemo.xaml
@@ -2,19 +2,16 @@
     x:Class="Dt.Sample.LottieDemo"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:a="using:Dt.Base">
+    xmlns:a="using:Dt.Base"
+    xmlns:skia="using:SkiaSharp.Views.Windows">
 
-    <ScrollViewer HorizontalScrollMode="Disabled"
-                  HorizontalScrollBarVisibility="Disabled"
-                  VerticalScrollMode="Auto"
-                  VerticalScrollBarVisibility="Auto"
-                  ZoomMode="Disabled">
-        <StackPanel Margin="20" Spacing="20">
-            <ProgressRing IsActive="True" HorizontalAlignment="Left" />
-            <TextBlock Text="Lottie 升级 WinUI3 后不可用" Foreground="Red" />
-            <AnimatedVisualPlayer x:Name="player">
-                
-            </AnimatedVisualPlayer>
-        </StackPanel>
-    </ScrollViewer>
+    <Grid RowDefinitions="*,*">
+        <skia:SKXamlCanvas x:Name="_cvs1"
+                       PaintSurface="OnPaint1"
+                       Background="Transparent" />
+        <skia:SKXamlCanvas x:Name="_cvs2"
+                       PaintSurface="OnPaint2"
+                       Background="Transparent" Grid.Row="1" />
+    </Grid>
+    
 </a:Win>
