--- a/Client/Dt.Sample/Styles/System/LottieDemo.xaml
+++ b/Client/Dt.Sample/Styles/System/LottieDemo.xaml
@@ -5,13 +5,18 @@
     xmlns:a="using:Dt.Base"
     xmlns:skia="using:SkiaSharp.Views.Windows">
 
-    <StackPanel Spacing="20">
-        <TextBlock Text="Android中json文件必须放在Assets目录下，路径中不包括Assets，如 ms-appx:///Lottie/xx.json" TextWrapping="Wrap" Margin="10,0,10,0" />
-        <StackPanel Orientation="Horizontal" Spacing="20">
-            <Button Content="上一幅" Click="OnPreview" />
-            <Button Content="下一幅" Click="OnNext" />
-            <TextBlock x:Name="_tb" VerticalAlignment="Center" />
+    <Grid RowDefinitions="Auto,*">
+        <StackPanel Spacing="20">
+            <TextBlock Text="iOS Android上通过SkiaSharp库实现Lottie动画，wasm中通过lottie.js将Lottie动画以svg格式渲染。&#x0a;Android上的json动画文件必须放在Assets目录下，路径中不包括Assets，如 ms-appx:///Lottie/xx.json"
+                       TextWrapping="Wrap"
+                       Margin="10,0,10,0" />
+            <StackPanel Orientation="Horizontal" Spacing="20">
+                <Button x:Name="_btnPlay" Content="&#xE02E;" Style="{StaticResource 字符按钮}" Click="OnPause" />
+                <Button Content="上一幅" Click="OnPreview" />
+                <Button Content="下一幅" Click="OnNext" />
+                <TextBlock x:Name="_tb" VerticalAlignment="Center" />
+            </StackPanel>
         </StackPanel>
-        <AnimatedVisualPlayer x:Name="_player" />
-    </StackPanel>
+        <AnimatedVisualPlayer x:Name="_player" Grid.Row="1" />
+    </Grid>
 </a:Win>
