--- a/Client/Dt.Shell.Wasm/WasmCSS/Fonts.css
+++ b/Client/Dt.Shell.Wasm/WasmCSS/Fonts.css
@@ -1,11 +1,11 @@
 ﻿@font-face {
     font-family: "DtIcon";
-    src: url(Fonts/icon.woff2) format("woff2");
+    src: url(Assets/Fonts/icon.woff2) format("woff2");
 }
 
 @font-face {
     font-family: "Symbols";
-    src: url(Fonts/uno-fluentui-assets.woff2) format("woff2");
+    src: url(Assets/Fonts/uno-fluentui-assets.woff2) format("woff2");
 }
 
 /* 确保同步加载字体，否则字体测量有问题 */
