--- a/Infras/Dt.Infras.Shared/HomePage.xaml
+++ b/Infras/Dt.Infras.Shared/HomePage.xaml
@@ -3,12 +3,16 @@
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
 
-    <Grid Background="White">
+    <StackPanel Background="White" Spacing="20" Margin="0,70,0,0">
         <StackPanel Orientation="Horizontal" Spacing="20">
             <Button Click="OnBlank" Content="空内容" />
             <Button Click="OnChart" Content="图表" />
             <Button Content="xls" Tag="MonthProfit.xlsx" Click="OnLoadFile" />
             <Button Content="xml" Tag="MonthProfit.ssxml" Click="OnLoadFile" />
         </StackPanel>
-    </Grid>
+        <StackPanel Orientation="Horizontal" Spacing="20">
+            <Button Click="OnPieStacked" Content="饼图" />
+            
+        </StackPanel>
+    </StackPanel>
 </Page>
