--- a/Client/Dt.Sample/DataAccess/RpcDemo.xaml
+++ b/Client/Dt.Sample/DataAccess/RpcDemo.xaml
@@ -12,7 +12,10 @@
         </StackPanel>
 
         <a:CBar Title="流模式" />
-        <Button Content="启动ServerStream" Click="OnServerStream" />
+        <StackPanel Orientation="Horizontal">
+            <Button Content="启动ServerStream" Click="OnServerStream" />
+            <Button Content="服务端推送给自己" Click="OnPush" />
+        </StackPanel>
         <a:CFree RowSpan="8" ShowTitle="False">
             <TextBox x:Name="_tbInfo"
                      AcceptsReturn="True"
