VS扩展单表框架支持通过表结构生成内容

--- a/Tools/DtTemplates/Dt/SingleTbl/Res/EntityForm.xaml
+++ b/Tools/DtTemplates/Dt/SingleTbl/Res/EntityForm.xaml
@@ -14,7 +14,6 @@
     </a:Mv.Menu>
 
     <a:Fv x:Name="_fv">
-        <a:CText ID="name" Title="名称" />
-        <a:CText ID="note" Title="描述" />
+$fvbody$
     </a:Fv>
 </a:Mv>
