VS扩展一对多功能

--- a/Tools/DtTemplates/Dt/OnToMany/Res/ChildList.xaml
+++ b/Tools/DtTemplates/Dt/OnToMany/Res/ChildList.xaml
@@ -20,7 +20,7 @@
             </a:Menu>
         </a:Ex.Menu>
         <DataTemplate>
-            <a:Dot ID="name" Margin="10,0,10,0" />
+$lvbody$
         </DataTemplate>
     </a:Lv>
 </a:Mv>
