--- a/Tools/DtTemplates/Dt/OnToMany/Res/TwoList.xaml
+++ b/Tools/DtTemplates/Dt/OnToMany/Res/TwoList.xaml
@@ -20,10 +20,7 @@
             </a:Menu>
         </a:Ex.Menu>
         <DataTemplate>
-            <StackPanel Padding="10">
-                <a:Dot ID="name" />
-                <a:Dot ID="note" Font="小灰" />
-            </StackPanel>
+$lvbody$
         </DataTemplate>
     </a:Lv>
 </a:Mv>
