--- a/Tools/DtTemplates/Dt/OnToMany/Res/ChildForm.xaml
+++ b/Tools/DtTemplates/Dt/OnToMany/Res/ChildForm.xaml
@@ -14,7 +14,6 @@
     </a:Mv.Menu>
 
     <a:Fv x:Name="_fv">
-        <a:CText ID="name" Title="名称" />
-        <a:CText ID="note" Title="描述" />
+$fvbody$
     </a:Fv>
 </a:Mv>
