--- a/Client/Dt.Base/Controls/Policy/PolicyDlg.xaml
+++ b/Client/Dt.Base/Controls/Policy/PolicyDlg.xaml
@@ -1,5 +1,5 @@
 ﻿<a:Dlg
-    x:Class="Dt.Base.PrivacyDlg"
+    x:Class="Dt.Base.PolicyDlg"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:a="using:Dt.Base"
