--- a/Client/Dt.Sample/Styles/System/SysButtonDemo.xaml
+++ b/Client/Dt.Sample/Styles/System/SysButtonDemo.xaml
@@ -14,5 +14,6 @@
         <Button Content="按 钮" Foreground="White" Background="{StaticResource 主蓝}" Style="{StaticResource SysButton}" />
         <HyperlinkButton Content="链接按钮" />
         <ToggleButton Content="ToggleButton" />
+        <Image Source="ms-appx:///Assets/logo.png" Stretch="None" />
     </StackPanel>
 </a:Win>
