--- a/Client/Dt.Sample/Structure/NotifyDemo.xaml
+++ b/Client/Dt.Sample/Structure/NotifyDemo.xaml
@@ -18,8 +18,10 @@
         <Button Content="带自启动的Toast通知" Click="OnParamsToast" />
 
         <Button Content="业务警告异常" Click="OnKnownException" Margin="0,20,0,0" />
+        <Button Content="后台业务警告异常" Click="OnTaskKnownException" />
         <Button Content="服务端返回的业务警告异常" Click="OnServerKnownException" />
         <Button Content="服务端异常" Click="OnServerException" />
-        <Button Content="未处理异常" Click="OnUnhandled" />
+        <Button Content="UI线程未处理异常" Click="OnUnhandled" />
+        <Button Content="后台未处理异常" Click="OnTaskUnhandled" />
     </StackPanel>
 </a:Win>
