--- a/Client/Dt.Base/Themes/Global.xaml
+++ b/Client/Dt.Base/Themes/Global.xaml
@@ -35,11 +35,19 @@
     <!-- 行内容高度 -->
     <x:Double x:Key="RowInnerHeight">40</x:Double>
 
-    <!-- 所有平台统一自定义字体库写法 https://platform.uno/docs/articles/features/custom-fonts.html -->
-    <!--自定义图标字体库-->
-    <FontFamily x:Key="IconFont">ms-appx:///Assets/Fonts/icon.ttf#DtIcon</FontFamily>
-    <!--uno中标准控件用到的字体库-->
-    <FontFamily x:Key="Symbols">ms-appx:///Assets/Fonts/uno-fluentui-assets.ttf#Symbols</FontFamily>
+    <!-- 自定义字体库写法 https://platform.uno/docs/articles/features/custom-fonts.html -->
+    <!-- 自定义图标字体库 -->
+    <win:FontFamily x:Key="IconFont">ms-appx:///Assets/Fonts/icon.ttf#DtIcon</win:FontFamily>
+    <ios:FontFamily x:Key="IconFont">ms-appx:///Assets/Fonts/icon.ttf#DtIcon</ios:FontFamily>
+    <android:FontFamily x:Key="IconFont">ms-appx:///Assets/Fonts/icon.ttf#DtIcon</android:FontFamily>
+    <!-- Fonts.css中定义 -->
+    <wasm:FontFamily x:Key="IconFont">DtIcon</wasm:FontFamily>
+    
+    <!-- uno中标准控件用到的字体库 -->
+    <win:FontFamily x:Key="Symbols">ms-appx:///Assets/Fonts/uno-fluentui-assets.ttf#Symbols</win:FontFamily>
+    <ios:FontFamily x:Key="Symbols">ms-appx:///Assets/Fonts/uno-fluentui-assets.ttf#Symbols</ios:FontFamily>
+    <android:FontFamily x:Key="Symbols">ms-appx:///Assets/Fonts/uno-fluentui-assets.ttf#Symbols</android:FontFamily>
+    <wasm:FontFamily x:Key="Symbols">Symbols</wasm:FontFamily>
     
     <!--
     *****************************************************************
