uno4.5.9中android的image路径采用新方式，4平台统一放在项目的Images目录下

--- a/Client/Dt.Sample/Styles/System/SysButtonDemo.xaml
+++ b/Client/Dt.Sample/Styles/System/SysButtonDemo.xaml
@@ -14,6 +14,6 @@
         <Button Content="按 钮" Foreground="White" Background="{StaticResource 主蓝}" Style="{StaticResource SysButton}" />
         <HyperlinkButton Content="链接按钮" />
         <ToggleButton Content="ToggleButton" />
-        <Image Source="ms-appx:///Assets/logo.png" Stretch="None" />
+        <Image Source="ms-appx:///Images/Logo.png" Height="50" Width="50" />
     </StackPanel>
 </a:Win>
