--- a/Client/Dt.Mgr/Home/DefaultLogin.xaml
+++ b/Client/Dt.Mgr/Home/DefaultLogin.xaml
@@ -14,7 +14,7 @@
         </Style>
     </Page.Resources>
     
-    <Grid x:Name="_grid">
+    <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="50" />
             <RowDefinition Height="Auto" />
@@ -27,7 +27,7 @@
                 <ColumnDefinition Width="Auto" />
                 <ColumnDefinition Width="*" />
             </Grid.ColumnDefinitions>
-            <Image Source="ms-appx:///Assets/logo.png" Height="50" Width="50" Stretch="None" />
+            <Image Source="ms-appx:///Images/Logo.png" Height="50" Width="50" />
             <TextBlock x:Name="_tbTitle" FontSize="{StaticResource 特大字}" Margin="5,8,5,8" Grid.Column="1"/>
         </Grid>
 
