--- a/Client/Dt.Sample/Styles/TestDemo2.xaml
+++ b/Client/Dt.Sample/Styles/TestDemo2.xaml
@@ -2,7 +2,8 @@
     x:Class="Dt.Sample.TestDemo2"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:a="using:Dt.Base">
+    xmlns:a="using:Dt.Base"
+    xmlns:local="using:Dt.Sample">
 
     <Grid x:Name="_grid">
         <Grid.RowDefinitions>
@@ -10,6 +11,30 @@
             <RowDefinition Height="*" />
         </Grid.RowDefinitions>
         <Button Content="Test" Click="OnTest" />
-        
+        <RefreshContainer x:Name="RefreshContainer" Grid.Row="1">
+            <ListView x:Name="ListView1">
+                <ListView.ItemTemplate>
+                    <DataTemplate x:DataType="local:ListItemData">
+                        <Grid Height="80">
+                            <Grid.RowDefinitions>
+                                <RowDefinition Height="Auto" />
+                                <RowDefinition Height="Auto" />
+                                <RowDefinition Height="*" />
+                            </Grid.RowDefinitions>
+                            <TextBlock Text="{x:Bind Path=Header}"
+                                   Style="{StaticResource SubtitleTextBlockStyle}"
+                                   Grid.Row="0"/>
+                            <TextBlock Text="{x:Bind Path=Date}"
+                                   Style="{StaticResource CaptionTextBlockStyle}"
+                                   Grid.Row="1"/>
+                            <TextBlock Text="{x:Bind Path=Body}"
+                                   Style="{StaticResource BodyTextBlockStyle}"
+                                   Grid.Row="2"
+                                   Margin="0,4,0,0" />
+                        </Grid>
+                    </DataTemplate>
+                </ListView.ItemTemplate>
+            </ListView>
+        </RefreshContainer>
     </Grid>
 </a:Win>
