uno4.5.x 后因iOS版切换Tab时内容不显示，改为Add方式，不再Insert到0的方式！因每层都有Clip，滚动时仍为分层效果

--- a/Infras/Dt.Infras.Shared/HomePage.xaml
+++ b/Infras/Dt.Infras.Shared/HomePage.xaml
@@ -11,6 +11,10 @@
             <Button Content="xml" Tag="MonthProfit.ssxml" Click="OnLoadFile" />
         </StackPanel>
         <StackPanel Orientation="Horizontal" Spacing="20">
+            <Button Click="OnMutiTab" Content="分组排序" />
+            <Button Click="OnSparkline" Content="迷你图" />
+        </StackPanel>
+        <StackPanel Orientation="Horizontal" Spacing="20">
             <Button Click="OnPieStacked" Content="饼图" />
             
         </StackPanel>
