将使用标准服务的管理功能全部拆分迁移到Dt.Mgr，Dt.Core Dt.Base与标准服务无任何耦合

--- a/Client/Dt.Sample/DataAccess/RpcDemo.xaml
+++ b/Client/Dt.Sample/DataAccess/RpcDemo.xaml
@@ -14,7 +14,7 @@
         <a:CBar Title="流模式" />
         <StackPanel Orientation="Horizontal">
             <Button Content="启动ServerStream" Click="OnServerStream" />
-            <Button Content="服务端推送给自己" Click="OnPush" />
+            <Button Content="服务端推送给自己(需标准服务)" Click="OnPush" />
         </StackPanel>
         <a:CFree RowSpan="8" ShowTitle="False">
             <TextBox x:Name="_tbInfo"
