--- a/Client/Dt.Mgr/Home/RootMenu.xaml
+++ b/Client/Dt.Mgr/Home/RootMenu.xaml
@@ -16,10 +16,10 @@
         <DataTemplate>
             <Grid Padding="12">
                 <StackPanel VerticalAlignment="Center">
-                    <a:Dot ID="Icon" UI="Icon" FontSize="30" Foreground="{StaticResource 主蓝}" Margin="0,0,0,4" HorizontalAlignment="Center" />
+                    <a:Dot ID="Icon" Call="Def.Icon" FontSize="30" Foreground="{StaticResource 主蓝}" Margin="0,0,0,4" HorizontalAlignment="Center" />
                     <a:Dot ID="Name" HorizontalAlignment="Center" />
                 </StackPanel>
-                <a:Dot ID="Warning" UI="Warning" HorizontalAlignment="Right" VerticalAlignment="Top" />
+                <a:Dot ID="Warning" Call="Def.Warning" HorizontalAlignment="Right" VerticalAlignment="Top" />
             </Grid>
         </DataTemplate>
     </a:Lv>
