--- a/Client/Dt.Base/Report/Design/DataSource/DbDataWin.xaml
+++ b/Client/Dt.Base/Report/Design/DataSource/DbDataWin.xaml
@@ -11,7 +11,7 @@
                     <DataTemplate>
                         <StackPanel Padding="10">
                             <a:Dot ID="name" />
-                            <a:Dot ID="cols" Font="小灰" />
+                            <a:Dot ID="cols" Call="Def.小灰" />
                         </StackPanel>
                     </DataTemplate>
                 </a:Lv>
