--- a/Client/Dt.Base/Structure/ModuleView/NavList/NavList.xaml
+++ b/Client/Dt.Base/Structure/ModuleView/NavList/NavList.xaml
@@ -19,9 +19,9 @@
                        VerticalAlignment="Center" />
                 <StackPanel VerticalAlignment="Center" Grid.Column="1">
                     <a:Dot ID="Title" />
-                    <a:Dot ID="Desc" Font="小灰" VerticalAlignment="Top" HorizontalAlignment="Left" />
+                    <a:Dot ID="Desc" Call="Def.小灰" VerticalAlignment="Top" HorizontalAlignment="Left" />
                 </StackPanel>
-                <a:Dot ID="Warning" UI="Warning" HorizontalAlignment="Right" VerticalAlignment="Top" Grid.Column="1" />
+                <a:Dot ID="Warning" Call="Def.Warning" HorizontalAlignment="Right" VerticalAlignment="Top" Grid.Column="1" />
             </Grid>
         </DataTemplate>
 
@@ -34,9 +34,9 @@
                            Margin="0,0,0,4"
                            HorizontalAlignment="Center" />
                     <a:Dot ID="Title" HorizontalAlignment="Center" />
-                    <a:Dot ID="Desc" Font="小灰" HorizontalAlignment="Center" />
+                    <a:Dot ID="Desc" Call="Def.小灰" HorizontalAlignment="Center" />
                 </StackPanel>
-                <a:Dot ID="Warning" UI="Warning" HorizontalAlignment="Right" VerticalAlignment="Top" />
+                <a:Dot ID="Warning" Call="Def.Warning" HorizontalAlignment="Right" VerticalAlignment="Top" />
             </Grid>
         </DataTemplate>
     </a:Mv.Resources>
