--- a/Client/Dt.Base/Structure/Tools/LocalDbView.xaml
+++ b/Client/Dt.Base/Structure/Tools/LocalDbView.xaml
@@ -18,7 +18,7 @@
                     <DataTemplate>
                         <StackPanel Margin="10">
                             <a:Dot ID="name" />
-                            <a:Dot ID="info" Font="小灰" Margin="0,6,0,0" />
+                            <a:Dot ID="info" Call="Def.小灰" Margin="0,6,0,0" />
                         </StackPanel>
                     </DataTemplate>
                 </a:Lv>
