--- a/Client/Dt.Mgr/Home/GroupMenu.xaml
+++ b/Client/Dt.Mgr/Home/GroupMenu.xaml
@@ -23,7 +23,7 @@
             <DataTemplate>
                 <Grid Padding="12">
                     <StackPanel VerticalAlignment="Center">
-                        <a:Dot ID="Icon" UI="Icon" FontSize="30" Foreground="{StaticResource 主蓝}" Margin="0,0,0,4" HorizontalAlignment="Center" />
+                        <a:Dot ID="Icon" Call="Def.Icon" FontSize="30" Foreground="{StaticResource 主蓝}" Margin="0,0,0,4" HorizontalAlignment="Center" />
                         <a:Dot ID="Name" HorizontalAlignment="Center" />
                     </StackPanel>
                 </Grid>
