--- a/Client/Dt.Mgr/Home/SearchMenu.xaml
+++ b/Client/Dt.Mgr/Home/SearchMenu.xaml
@@ -31,7 +31,7 @@
                         </Grid.RowDefinitions>
                         <a:Dot ID="Name" VerticalAlignment="Center" HorizontalAlignment="Left" />
                         <a:Dot ID="Note"
-                               Font="小灰"
+                               Call="Def.小灰"
                                VerticalAlignment="Top"
                                HorizontalAlignment="Left"
                                Grid.Row="1"/>
