--- a/Client/Dt.Mgr/Model/Role/RoleList.xaml
+++ b/Client/Dt.Mgr/Model/Role/RoleList.xaml
@@ -16,7 +16,7 @@
         <DataTemplate>
             <StackPanel Padding="10">
                 <a:Dot ID="name" />
-                <a:Dot ID="note" Font="小灰" />
+                <a:Dot ID="note" Call="Def.小灰" />
             </StackPanel>
         </DataTemplate>
     </a:Lv>
