--- a/Client/Dt.Mgr/Model/User/UserAccountList.xaml
+++ b/Client/Dt.Mgr/Model/User/UserAccountList.xaml
@@ -25,9 +25,9 @@
                     <a:Dot ID="phone" VerticalAlignment="Center" Margin="4,0,0,0" />
                 </StackPanel>
                 <StackPanel Orientation="Horizontal">
-                    <a:Dot ID="ctime" Font="小灰" />
+                    <a:Dot ID="ctime" Call="Def.小灰" />
                     <TextBlock Text="&#xE005;" Margin="40,0,0,0" FontFamily="{StaticResource IconFont}" Style="{StaticResource 小灰}" />
-                    <a:Dot ID="mtime" Font="小灰" VerticalAlignment="Center" Margin="10,0,0,0" />
+                    <a:Dot ID="mtime" Call="Def.小灰" VerticalAlignment="Center" Margin="10,0,0,0" />
                 </StackPanel>
             </StackPanel>
         </DataTemplate>
