--- a/Client/Dt.Mgr/Publish/Manager/Keyword/KeywordList.xaml
+++ b/Client/Dt.Mgr/Publish/Manager/Keyword/KeywordList.xaml
@@ -17,8 +17,8 @@
             <StackPanel Padding="10">
                 <a:Dot ID="id" />
                 <StackPanel Orientation="Horizontal">
-                    <a:Dot ID="Creator" Font="小灰" />
-                    <a:Dot ID="Ctime" Font="小灰" Margin="20,0,0,0" />
+                    <a:Dot ID="Creator" Call="Def.小灰" />
+                    <a:Dot ID="Ctime" Call="Def.小灰" Margin="20,0,0,0" />
                 </StackPanel>
             </StackPanel>
         </DataTemplate>
