--- a/Client/Dt.Mgr/Publish/Manager/Post/PostxList.xaml
+++ b/Client/Dt.Mgr/Publish/Manager/Post/PostxList.xaml
@@ -28,18 +28,18 @@
                 <StackPanel Padding="10">
                     <a:Dot ID="Title" />
                     <StackPanel Orientation="Horizontal" Spacing="30" Padding="0,10,0,0">
-                        <a:Dot ID="Creator" Font="小灰" />
-                        <a:Dot ID="Ctime" Font="小灰" />
+                        <a:Dot ID="Creator" Call="Def.小灰" />
+                        <a:Dot ID="Ctime" Call="Def.小灰" />
                         <StackPanel Orientation="Horizontal">
                             <TextBlock Text="&#xE062;" FontFamily="{StaticResource IconFont}" VerticalAlignment="Center" Foreground="{StaticResource 深灰2}" />
-                            <a:Dot ID="ReadCount" Font="小灰" Margin="4,0,0,0" />
+                            <a:Dot ID="ReadCount" Call="Def.小灰" Margin="4,0,0,0" />
                         </StackPanel>
                         <StackPanel Orientation="Horizontal">
                             <TextBlock Text="&#xE07F;" FontFamily="{StaticResource IconFont}" VerticalAlignment="Center" Foreground="{StaticResource 深灰2}" />
-                            <a:Dot ID="CommentCount" Font="小灰" Margin="4,0,0,0" />
+                            <a:Dot ID="CommentCount" Call="Def.小灰" Margin="4,0,0,0" />
                         </StackPanel>
                         <StackPanel Orientation="Horizontal">
-                            <a:Dot ID="IsPublish" UI="CheckBox" Foreground="{StaticResource 深灰2}" />
+                            <a:Dot ID="IsPublish" Call="Def.CheckBox" Foreground="{StaticResource 深灰2}" />
                             <TextBlock Text="发布" VerticalAlignment="Center" Style="{StaticResource 小灰}" Margin="4,0,0,0" />
                         </StackPanel>
                     </StackPanel>
