--- a/Client/Dt.Mgr/Workflow/RunTime/CurrentTasks.xaml
+++ b/Client/Dt.Mgr/Workflow/RunTime/CurrentTasks.xaml
@@ -15,12 +15,12 @@
                 <a:Lv x:Name="_lv" ItemClick="OnItemClick">
                     <DataTemplate>
                         <StackPanel Padding="10">
-                            <a:Dot ID="title" />
+                            <a:Dot ID="title" Call="CurrentTasksUI.FormatTitle" />
                             <StackPanel Orientation="Horizontal" Margin="0,6,0,6">
-                                <a:Dot ID="sender" Font="小灰" />
+                                <a:Dot ID="sender" Call="Def.小灰" />
                                 <TextBlock Text="{Binding [stime],Converter={StaticResource CvDateTime}}" Margin="10,0,0,0" Style="{StaticResource 小灰}" />
                             </StackPanel>
-                            <a:Dot ID="prcname" Font="小灰" />
+                            <a:Dot ID="prcname" Call="Def.小灰" />
                         </StackPanel>
                     </DataTemplate>
                 </a:Lv>
