--- a/Client/Dt.Mgr/Workflow/RunTime/HistoryTasks.xaml
+++ b/Client/Dt.Mgr/Workflow/RunTime/HistoryTasks.xaml
@@ -47,12 +47,12 @@
                     </a:Ex.Menu>
                     <DataTemplate>
                         <StackPanel Padding="10">
-                            <a:Dot ID="title" />
+                            <a:Dot ID="title" Call="HistoryTaskUI.FormatTile" />
                             <StackPanel Orientation="Horizontal" Margin="0,6,0,6">
-                                <a:Dot ID="sender" Font="小灰" />
+                                <a:Dot ID="sender" Call="Def.小灰" />
                                 <TextBlock Text="{Binding [stime],Converter={StaticResource CvDateTime}}" Margin="10,0,0,0" Style="{StaticResource 小灰}" />
                             </StackPanel>
-                            <a:Dot ID="prcname" Font="小灰" />
+                            <a:Dot ID="prcname" Call="Def.小灰" />
                         </StackPanel>
                     </DataTemplate>
                 </a:Lv>
