--- a/Client/Dt.Sample/FormView/LvInFv.xaml
+++ b/Client/Dt.Sample/FormView/LvInFv.xaml
@@ -88,7 +88,7 @@
                                         <StackPanel Grid.Row="1" Grid.ColumnSpan="2">
                                             <a:Dot ID="shenfenzh" />
                                             <a:Dot ID="bumen" />
-                                            <a:Dot ID="note" Font="小灰" />
+                                            <a:Dot ID="note" Call="Def.小灰" />
                                         </StackPanel>
                                     </Grid>
                                 </DataTemplate>
