--- a/Client/Dt.Sample/FormView/SelectionCellDemo.xaml
+++ b/Client/Dt.Sample/FormView/SelectionCellDemo.xaml
@@ -45,7 +45,7 @@
                                 </Border>
                                 <StackPanel Margin="10,0,0,0" VerticalAlignment="Center" Grid.Column="1">
                                     <a:Dot ID="xm" />
-                                    <a:Dot ID="note" Font="小灰" MaxHeight="60" VerticalAlignment="Top" HorizontalAlignment="Left" />
+                                    <a:Dot ID="note" Call="Def.小灰" MaxHeight="60" VerticalAlignment="Top" HorizontalAlignment="Left" />
                                 </StackPanel>
                             </Grid>
                         </DataTemplate>
