--- a/Client/Dt.Sample/ListView/LvItemStyle.xaml
+++ b/Client/Dt.Sample/ListView/LvItemStyle.xaml
@@ -1,5 +1,5 @@
 ﻿<a:Win
-    x:Class="Dt.Sample.LvViewEx"
+    x:Class="Dt.Sample.LvItemStyle"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:a="using:Dt.Base">
@@ -10,10 +10,10 @@
             <a:Col ID="bh" Title="编号" Width="80" />
             <a:Col ID="chushengrq" Title="出生日期" Width="120" />
             <a:Col ID="shenfenzh" Title="身份证号码" Width="200" />
-            <a:Col ID="xb" Title="性别" Width="50" />
+            <a:Col ID="xb" Title="性别" Call="LvItemStyleUI.性别头像" Width="50" />
             <a:Col ID="hunfou" Title="婚否" Width="50" />
-            <a:Col ID="line" Title="身高曲线" Width="150" />
-            <a:Col ID="bumen" Title="所属部门" Width="160" />
+            <a:Col ID="line" Title="身高曲线" Call="LvItemStyleUI.曲线" Width="150" />
+            <a:Col ID="bumen" Title="所属部门" Width="160" Background="Black" Foreground="White" />
             <a:Col ID="shengao" Title="身高" Width="150" />
         </a:Cols>
 
@@ -31,21 +31,21 @@
                         Height="50"
                         Width="50"
                         VerticalAlignment="Center">
-                    <a:Dot ID="xb" FontSize="30" Foreground="White" VerticalAlignment="Center" />
+                    <a:Dot ID="xb" Call="LvItemStyleUI.性别头像" FontSize="30" Foreground="White" VerticalAlignment="Center" />
                 </Border>
 
                 <StackPanel Margin="10,0,0,0" VerticalAlignment="Center" Grid.Column="1">
                     <a:Dot ID="xm" />
                     <StackPanel Orientation="Horizontal">
                         <a:Dot ID="chushengrq" />
-                        <a:Dot ID="line" Margin="20,0,0,0" />
+                        <a:Dot ID="line" Call="LvItemStyleUI.曲线" Margin="20,0,0,0" />
                         <a:Dot ID="shengao" Margin="20,0,0,0" />
                     </StackPanel>
                 </StackPanel>
                 <StackPanel Grid.Row="1" Grid.ColumnSpan="2">
                     <a:Dot ID="shenfenzh" />
                     <a:Dot ID="bumen" />
-                    <a:Dot ID="note" Font="小灰" />
+                    <a:Dot ID="note" Call="Def.小灰" />
                 </StackPanel>
 
             </Grid>
@@ -55,19 +55,7 @@
     <a:Main>
         <a:Tabs>
             <a:Tab Order="1" Title="列表">
-                <a:Lv x:Name="_lv" ViewMode="Table">
-                    <a:Cols>
-                        <a:Col ID="xm" Title="姓名" Width="120" />
-                        <a:Col ID="bh" Title="编号" Width="80" />
-                        <a:Col ID="chushengrq" Title="出生日期" Width="120" />
-                        <a:Col ID="shenfenzh" Title="身份证号码" Width="200" />
-                        <a:Col ID="xb" Title="性别" Width="50" />
-                        <a:Col ID="hunfou" Title="婚否" Width="50" />
-                        <a:Col ID="line" Title="身高曲线" Width="150" />
-                        <a:Col ID="bumen" Title="所属部门" Width="160" Background="Black" Foreground="White" />
-                        <a:Col ID="shengao" Title="身高" Width="150" />
-                    </a:Cols>
-                </a:Lv>
+                <a:Lv x:Name="_lv" />
             </a:Tab>
         </a:Tabs>
     </a:Main>
@@ -87,7 +75,7 @@
                         <Button Content="删除分组" Click="OnDelGroup" />
                     </StackPanel>
                     <a:CBar Title="说明" />
-                    <a:CBar RowSpan="8">
+                    <a:CBar RowSpan="6">
                         <TextBlock Margin="10">
                             <LineBreak />
                             <Run Text="行样式：" /><LineBreak />
@@ -98,7 +86,7 @@
                             <Run Text="格样式：" /><LineBreak />
                             <Run Text="性别头像；" /><LineBreak />
                             <Run Text="身高曲线；" /><LineBreak />
-                            <Run Text="所属部门黑底白字；" />
+                            <Run Text="所属部门黑底白字；" /><LineBreak />
                         </TextBlock>
                     </a:CBar>
                 </a:Fv>
