--- a/Client/Dt.Sample/ModuleView/NavListDemo.xaml
+++ b/Client/Dt.Sample/ModuleView/NavListDemo.xaml
@@ -20,9 +20,9 @@
                        VerticalAlignment="Center" />
                 <StackPanel VerticalAlignment="Center" Grid.Column="1">
                     <a:Dot ID="Title" />
-                    <a:Dot ID="Desc" Font="小灰" VerticalAlignment="Top" HorizontalAlignment="Left" />
+                    <a:Dot ID="Desc" Call="Def.小灰" VerticalAlignment="Top" HorizontalAlignment="Left" />
                 </StackPanel>
-                <a:Dot ID="Warning" UI="Warning" HorizontalAlignment="Right" VerticalAlignment="Top" Grid.Column="1" />
+                <a:Dot ID="Warning" Call="Def.Warning" HorizontalAlignment="Right" VerticalAlignment="Top" Grid.Column="1" />
             </Grid>
         </DataTemplate>
     </a:Win.Resources>
