--- a/Client/Dt.Base/Themes/Styles/FormView.xaml
+++ b/Client/Dt.Base/Themes/Styles/FormView.xaml
@@ -165,7 +165,7 @@
 
     <!--CList的object选项模板-->
     <DataTemplate x:Key="CListObjView">
-        <a:Dot ID="#" Margin="10,0,10,0" />
+        <a:Dot Margin="10,0,10,0" />
     </DataTemplate>
 
     <!--CHtml-->
